--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -8,7 +8,7 @@
       content="Web site created using create-react-app"
     />
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@500&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <title>Nate Portfolio Website</title>
+    <title>Nate Wolfe Portfolio Website</title>
     <style>
       *{
         font-family: 'Lexend Deca', sans-serif;
